# cashback

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROGRESS.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
src/package_cashback/: __init__.py  __main__.py
tests/: test_end_to_end.py  test_smoke.py
