[build-system]
requires = ["setuptools>=69", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cashback"
version = "0.1.0"
description = "Python project cashback"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
  { name = "Sergei Teplov" }
]
keywords = ["cashback"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/serjteplov/cashback"
Repository = "https://github.com/serjteplov/cashback"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.16",
  "mypy>=2.1.0",
  "pre-commit>=4.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "N"
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
files = ["src", "tests"]
warn_return_any = true
no_implicit_optional = true
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
show_error_codes = true
strict_equality = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
